perl/DeploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: mojo
  name: mojo
spec:
  replicas: 4
  selector:
    app: mojo
    deploymentconfig: mojo
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: mojo
        deploymentconfig: mojo
    spec:
      containers:
      - image: mojo/mojo:latest
        imagePullPolicy: Always
        name: mojo
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - mojo
      from:
        kind: ImageStreamTag
        name: mojo:latest
    type: ImageChange
