perl/Services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mojo
  name: mojo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mojo
    deploymentconfig: mojo
  sessionAffinity: None
  type: ClusterIP
