perl/Route.yaml
apiVersion: v1
kind: Route
metadata:
  name: mojo
spec:
  to:
    kind: Service
    name: mojo
